#find_package(SDL2 REQUIRED)
#find_package(epoxy REQUIRED)

GalogenGenerate(OpenGLBindings43 "gl" "4.3")

set(POLYGLDEVICE_INCLUDE Src)

file(GLOB_RECURSE POLYGLDEVICE_SRCS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} 
	${POLYGLDEVICE_INCLUDE}/*.cpp 
	${POLYGLDEVICE_INCLUDE}/*.hpp
	${POLYGLDEVICE_INCLUDE}/*.h)
GenerateSourceGoups("${POLYGLDEVICE_SRCS}")

add_library(${GLDEVICE_TARGET} SHARED ${POLYGLDEVICE_SRCS})
target_compile_definitions(${GLDEVICE_TARGET} PRIVATE _DEVICE)
target_include_directories(${GLDEVICE_TARGET} PUBLIC ${POLYGLDEVICE_INCLUDE} ${SDL2_INCLUDE_DIRS} ${IMGUI_INCLUDE_DIRS})
target_link_libraries(${GLDEVICE_TARGET} PRIVATE ${ENGINE_TARGET} ${SDL2_LIBRARIES} Imgui OpenGLBindings43)

#set_target_properties(${GLDEVICE_TARGET} PROPERTIES COTIRE_CXX_PREFIX_HEADER_INIT "Src/${GLDEVICE_TARGET}PCH.hpp")
cotire(${GLDEVICE_TARGET})