GalogenGenerate(OpenGLBindings43 "gl" "4.3")

set(POLYGLDEVICE_INCLUDE ${CMAKE_CURRENT_LIST_DIR}/Src)

file(GLOB_RECURSE POLYGLDEVICE_SRCS RELATIVE ${CMAKE_CURRENT_LIST_DIR} 
	${POLYGLDEVICE_INCLUDE}/*.cpp 
	${POLYGLDEVICE_INCLUDE}/*.hpp
	${POLYGLDEVICE_INCLUDE}/*.h)
GenerateSourceGoups("${POLYGLDEVICE_SRCS}")

add_library(${GLDEVICE_TARGET} SHARED ${POLYGLDEVICE_SRCS})
target_compile_definitions(${GLDEVICE_TARGET} PRIVATE _DEVICE)
target_include_directories(${GLDEVICE_TARGET} PUBLIC ${POLYGLDEVICE_INCLUDE} ${SDL2_INCLUDE_DIRS})
target_link_libraries(${GLDEVICE_TARGET} PRIVATE ${API_TARGET} ${ENGINE_TARGET} ${SDL2_LIBRARIES} OpenGLBindings43)

set_target_properties(${GLDEVICE_TARGET} PROPERTIES COTIRE_CXX_PREFIX_HEADER_INIT "${CMAKE_CURRENT_LIST_DIR}/Src/PolyRenderingDeviceGLPCH.hpp")
set_target_properties(${GLDEVICE_TARGET} PROPERTIES FOLDER "Engine" )
set_target_properties(OpenGLBindings43 PROPERTIES FOLDER "Engine/Misc" )
cotire(${GLDEVICE_TARGET})